patches/userlit
Bottom: d37cd02ef1b4207e5b6bca9ebbb7f76411ad1c0b
Top:    5190da88a38b930d66ca1c83782c47ec7036c675
Author: scott snyder <sss@karma>
Date:   2023-02-12 17:25:02 -0500

Fix warnings seen for user-defined literals.
Example:

constexpr double operator"" _degree(unsigned long long x) { 
  return 0.017453292519943295 * x;                   
}

void  TestTrackState()
{
  int foo  = 90_degree;
}


$ cppcheck  x.cc
Checking x.cc ...
x.cc:0:0: error: Internal Error. MathLib::toLongNumber: input was not completely consumed: 90_degree [cppcheckError]

^

This seems to have been reported:

https://trac.cppcheck.net/ticket/11438
